; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_dynamic_request_hw_context.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_dynamic_request_hw_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Requesting no HW context.\0A\00", align 1
@.str.1 = private unnamed_addr constant [97 x i8] c"Requesting Vulkan context, but RetroArch is not compiled against Vulkan. Cannot use HW context.\0A\00", align 1
@.str.2 = private unnamed_addr constant [29 x i8] c"Requesting unknown context.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @dynamic_request_hw_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dynamic_request_hw_context(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %13 [
    i32 134, label %9
    i32 128, label %11
  ]

9:                                                ; preds = %3
  %10 = call i32 (i8*, ...) @RARCH_LOG(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %15

11:                                               ; preds = %3
  %12 = call i32 (i8*, ...) @RARCH_ERR(i8* getelementptr inbounds ([97 x i8], [97 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %16

13:                                               ; preds = %3
  %14 = call i32 (i8*, ...) @RARCH_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %16

15:                                               ; preds = %9
  store i32 1, i32* %4, align 4
  br label %16

16:                                               ; preds = %15, %13, %11
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local i32 @RARCH_LOG(i8*, ...) #1

declare dso_local i32 @RARCH_ERR(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
